add filter functionality

--- a/projects/todo-typescript/index.html
+++ b/projects/todo-typescript/index.html
@@ -57,24 +57,21 @@
             <li>
               <a
                 href="#"
-                class="header__menu-link header__menu-link--active change-active-tab"
-                data-filter="ALL"
+                class="header__menu-link header__menu-link--active change-active-tab filter-all"
                 >home</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="header__menu-link change-active-tab"
-                data-filter="COMPLETED"
+                class="header__menu-link change-active-tab filter-complete"
                 >completed</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="header__menu-link change-active-tab"
-                data-filter="PENDING"
+                class="header__menu-link change-active-tab filter-incomplete"
                 >remaining</a
               >
             </li>
@@ -264,8 +261,7 @@
         <li>
           <a
             href="#"
-            class="bottom-nav__link change-active-tab header__menu-link--active"
-            data-filter="ALL"
+            class="bottom-nav__link change-active-tab header__menu-link--active filter-all"
           >
             <div class="bottom-nav__link-icon">
               <svg
@@ -289,8 +285,7 @@
         <li>
           <a
             href="#"
-            class="bottom-nav__link change-active-tab"
-            data-filter="COMPLETED"
+            class="bottom-nav__link change-active-tab filter-complete"
           >
             <div class="bottom-nav__link-icon">
               <svg
@@ -314,7 +309,7 @@
         <li>
           <a
             href="#"
-            class="bottom-nav__link change-active-tab"
+            class="bottom-nav__link change-active-tab filter-incomplete"
             data-filter="PENDING"
           >
             <div class="bottom-nav__link-icon">
