--- a/index.html
+++ b/index.html
@@ -197,6 +197,26 @@
               >
             </td>
           </tr>
+
+          <tr>
+            <th class="p-3" scope="row">9</th>
+            <td class="p-3">Todo Typescript</td>
+            <td class="p-3 d-flex gap-2 flex-wrap">
+              <a
+                href="https://lfkaushal.github.io/projects/todo-typescript/dist/index.html"
+                class="btn btn-success btn-sm"
+                target="_blank"
+                >Demo Link</a
+              >
+
+              <a
+                href="https://github.com/lfkaushal/lfkaushal.github.io/tree/main/projects/todo-typescript"
+                class="btn btn-success btn-sm"
+                target="_blank"
+                >Github Link</a
+              >
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
