--- a/projects/todo-typescript/index.html
+++ b/projects/todo-typescript/index.html
@@ -14,9 +14,6 @@
       rel="stylesheet"
     />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-
     <title>Faire Typescript | Todo App</title>
   </head>
   <body>
@@ -364,7 +361,7 @@
     </ul>
     <!-- Bottom Navigation Ends -->
 
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
 
