--- a/index.html
+++ b/index.html
@@ -237,6 +237,19 @@
               >
             </td>
           </tr>
+
+          <tr>
+            <th class="p-3" scope="row">11</th>
+            <td class="p-3">SQL 1</td>
+            <td class="p-3 d-flex gap-2 flex-wrap">
+              <a
+                href="https://github.com/lfkaushal/lfkaushal.github.io/tree/main/projects/sql-1"
+                class="btn btn-success btn-sm"
+                target="_blank"
+                >Github Link</a
+              >
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
